--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   fl_chart: 0.40.2
   firebase_core: 1.10.0
   firebase_auth: 3.2.0
+  shimmer: 2.0.0
 
 dev_dependencies:
   flutter_test:
