--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: 1.10.0
   firebase_auth: 3.2.0
   shimmer: 2.0.0
+  flutter_native_splash: 1.3.2
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,18 @@ dev_dependencies:
   freezed: 0.14.5
   hive_generator: 1.1.1
   auto_route_generator: 2.3.2
+  flutter_launcher_icons: 0.9.2
+
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+flutter_native_splash:
+  color: "#0C0B09"
+  image: "assets/images/crypto_splash_screen.png"
+
+flutter_icons:
+  image_path: "assets/images/crypto_favicon.png"
+  android: true
+  ios: true
