--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   firebase_auth: 3.2.0
   shimmer: 2.0.0
   flutter_native_splash: 1.3.2
+  lazy_load_scrollview: 1.3.0
+  fluttertoast: 8.0.8
 
 dev_dependencies:
   flutter_test:
