--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_native_splash: 1.3.2
   lazy_load_scrollview: 1.3.0
   fluttertoast: 8.0.8
+  easy_localization: 3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -41,11 +42,11 @@ dev_dependencies:
   auto_route_generator: 2.3.2
   flutter_launcher_icons: 0.9.2
 
-
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/translations/
 flutter_native_splash:
   color: "#0C0B09"
   image: "assets/images/crypto_splash_screen.png"
