--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -39,6 +39,9 @@ analyzer:
     # see https://github.com/dart-lang/sdk/issues/28463
     - "lib/i18n/messages_*.dart"
     - "lib/src/http/**"
+    - "**/*.g.dart"
+    - "**/*.gr.dart"
+    - "**/*.freezed.dart"
 
 linter:
   rules:
@@ -172,7 +175,6 @@ linter:
     - slash_for_doc_comments
     # - sort_child_properties_last # not yet tested
     # - sort_constructors_first
-    - sort_pub_dependencies
     - sort_unnamed_constructors_first
     - test_types_in_equals
     - throw_in_finally
