--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,37 +6,37 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  auto_route: 3.2.0
+  auto_route: 5.0.1
   convex_bottom_bar: 3.0.0
   cupertino_icons: ^1.0.2
-  easy_localization: 3.0.0
+  easy_localization: 3.0.1
   fl_chart: 0.40.2
-  flutter_bloc: 8.0.0
-  flutter_native_splash: 1.3.2
-  flutter_screenutil: 5.0.0
-  fluttertoast: 8.0.8
+  flutter_bloc: 8.1.1
+  flutter_native_splash: 2.2.8
+  flutter_screenutil: 5.5.3+2
+  fluttertoast: 8.0.9
   get_it: 7.2.0
   hive_flutter: 1.1.0
-  http: 0.13.4
-  salomon_bottom_bar: 3.1.0
+  http: 0.13.5
+  salomon_bottom_bar: 3.3.1
   shimmer: 2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: 3.2.0
-  build_runner: 2.1.5
-  flutter_launcher_icons: 0.9.2
-  flutter_lints: 1.0.0
-  freezed: 0.14.5
-  hive_generator: 1.1.1
+  auto_route_generator: 5.0.1
+  build_runner: 2.2.0
+  flutter_launcher_icons: 0.10.0
+  flutter_lints: 2.0.1
+  freezed: 2.1.0+1
+  hive_generator: 1.1.3
 
 flutter:
   uses-material-design: true
