--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   auto_route: 5.0.1
   convex_bottom_bar: 3.0.0
   cupertino_icons: ^1.0.2
-  easy_localization: 3.0.1
+  easy_localization: ^3.0.1
   fl_chart: 0.40.2
   flutter_bloc: 8.1.1
   flutter_native_splash: 2.2.8
