--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,31 +12,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-  auto_route: 2.3.2
-  convex_bottom_bar: 3.0.0
+  auto_route: ^9.2.2
+  convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
-  easy_localization: 3.0.0
-  fl_chart: 0.40.2
-  flutter_bloc: 8.0.0
-  flutter_native_splash: 1.3.2
-  flutter_screenutil: 5.0.0
-  fluttertoast: 8.0.8
-  get_it: 7.2.0
-  hive_flutter: 1.1.0
-  http: 0.13.4
-  salomon_bottom_bar: 3.1.0
-  shimmer: 2.0.0
+  easy_localization: ^3.0.7
+  fl_chart: ^0.69.0
+  flutter_bloc: ^8.1.6
+  flutter_native_splash: ^2.4.2
+  flutter_screenutil: ^5.9.3
+  fluttertoast: ^8.2.8
+  get_it: ^8.0.0
+  hive_flutter: ^1.1.0
+  http: ^1.2.2
+  salomon_bottom_bar: ^3.3.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: 2.3.2
-  build_runner: 2.1.4
-  flutter_launcher_icons: 0.9.2
-  flutter_lints: 1.0.0
-  freezed: 0.14.5
-  hive_generator: 1.1.1
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.1
+  flutter_lints: ^5.0.0
+  freezed: ^2.5.7
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
