--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,31 +12,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-  auto_route: 5.0.1
-  convex_bottom_bar: 3.0.0
+  auto_route: ^9.2.2
+  convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.7
   fl_chart: ^0.69.0
   flutter_bloc: ^8.1.6
-  flutter_native_splash: 2.2.8
+  flutter_native_splash: ^2.4.2
   flutter_screenutil: ^5.9.3
-  fluttertoast: 8.0.9
+  fluttertoast: ^8.2.8
   get_it: ^8.0.0
   hive_flutter: 1.1.0
-  http: 0.13.5
-  salomon_bottom_bar: 3.3.1
-  shimmer: 2.0.0
+  http: ^1.2.2
+  salomon_bottom_bar: ^3.3.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: 5.0.1
-  build_runner: 2.2.0
-  flutter_launcher_icons: 0.10.0
-  flutter_lints: 2.0.1
-  freezed: 2.1.0+1
-  hive_generator: 1.1.3
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.4.13
+  flutter_launcher_icons: ^0.14.1
+  flutter_lints: ^5.0.0
+  freezed: ^2.5.7
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
