--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   shimmer: ^3.0.0
   connectivity_plus: ^4.0.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
