✨ feat(Added Ukranian localization): Localization

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,6 +43,8 @@
 		<array>
 			<string>en</string>
 			<string>ru</string>
+			<string>ua</string>
+
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
